--- a/vezeeta.Net/vezeeta.Net.csproj
+++ b/vezeeta.Net/vezeeta.Net.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\patientImages\" />
+  </ItemGroup>
+
 </Project>
